--- a/index.html
+++ b/index.html
@@ -20,24 +20,16 @@
     <div class="d-flex justify-content-around ">
         <div class="d-block  col-3 col-md-3 col-lg-2 L-4">
             <form>
-                <label for="search-for-a-city" class="label ">search for a city :</label>
+                <label for="search-for-a-city" class="label ">Search for a city :</label>
                 <input id="search-city" class="form-control me-2 mt-4" type="search" placeholder="Search"
                     aria-label="Search">
                 <button class="btn btn-outline-success col-12 col-md-12 col-lg-12 mt-4" type="submit">Search</button>
             </form>
             <div class="city-History p-10 ">
-                <!-- <button type="button col-12 col-md-12 col-lg-12" class="btn btn-secondary">Atlanta</button> <br>
-                <button type="button" class="btn btn-secondary">Denver</button><br>
-                <button type="button" class="btn btn-secondary">Seattle</button><br>
-                <button type="button" class="btn btn-secondary">San Francisco</button><br>
-                <button type="button" class="btn btn-secondary">Orlando</button><br>
-                <button type="button" class="btn btn-secondary">New York</button><br>
-                <button type="button" class="btn btn-secondary">Chicago</button>
-                <br>
-                <button type="button" class="btn btn-secondary">Austin</button> -->
+               
             </div>
         </div>
-        <div class="   ">
+        <div class=" current-D  ">
             <div class="current-forecast">
                 <p class="current-city"></p>
                 <p class="current-day"></p>
@@ -47,6 +39,10 @@
                 <p class="uvi"></p>
             </div>
 
+            <div class="FivedayTitle">
+
+            </div>
+            
             <div class="five-day d-flex justify-content-between">
 
             </div>
