--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header id = #header ">
         <h2>Weather Dashboard</h2>
     </div>
-    <div class="d-flex justify-content-around ">
+    <div class="d-flex main-content justify-content-around ">
         <div class="d-block  col-3 col-md-3 col-lg-2 L-4">
             <form>
                 <label for="search-for-a-city" class="label ">Search for a city :</label>
@@ -50,14 +50,16 @@
 
     </div>
 
-
+   
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
         integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+    
     <script src="./assets/script.js"></script>
 </body>
 
 </html>
+
